; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/mathlib/extr_m4x4.c_m4x4_pivoted_transform_by_vec3.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/mathlib/extr_m4x4.c_m4x4_pivoted_transform_by_vec3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m4x4_pivoted_transform_by_vec3(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %12, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %13, align 4
  %17 = call i32 @VectorAdd(i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %13, align 4
  %20 = call i32 @m4x4_translate_by_vec3(i32 %18, i32 %19)
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @m4x4_rotate_by_vec3(i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @m4x4_scale_by_vec3(i32 %25, i32 %26)
  %28 = load i32, i32* %12, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @VectorNegative(i32 %28, i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @m4x4_translate_by_vec3(i32 %31, i32 %32)
  ret void
}

declare dso_local i32 @VectorAdd(i32, i32, i32) #1

declare dso_local i32 @m4x4_translate_by_vec3(i32, i32) #1

declare dso_local i32 @m4x4_rotate_by_vec3(i32, i32, i32) #1

declare dso_local i32 @m4x4_scale_by_vec3(i32, i32) #1

declare dso_local i32 @VectorNegative(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
